# knot3d

./: .gitignore  CHANGELOG.md  DECISIONS.md  Makefile  README.md  gui_main.py  main.py  pyproject.toml  requirements.txt  warmup_solver.py
.claude/: settings.local.json
assets/styles/: app.qss
examples/: cinquefoil.json  figure_eight.json  hundred_crossing.json  notebook_demo.ipynb  reference_11c.json  run_all.py  trefoil.json  unknot.json
scripts/: batch_analyze.py  benchmark.py  blender_import.py  discover_apis.py
src/: __init__.py  api_discovery.py  config.py  crossing_change.py  embedding_3d.py  hfk_engine.py  invariants.py  knot_builder.py  layout_2d.py  logging_setup.py  mesh_export.py  obstruction.py  pd_conventions.py  pd_parser.py  unknot_recognizer.py  unknotting_search.py  utils.py  viz_matplotlib.py  viz_pyvista.py
src/gui/: __init__.py  app.py  main_window.py  settings.py  signals.py  state.py  theme.py
src/gui/controllers/: __init__.py  analysis_controller.py  app_controller.py  crossing_controller.py  export_controller.py  session_controller.py
src/gui/dialogs/: __init__.py  about_dialog.py  export_dialog.py  preferences_dialog.py  session_info_dialog.py
src/services/: __init__.py  compute_policy.py  engine_facade.py  export_service.py  recent_files.py  session_store.py
tests/: conftest.py  test_analysis_controller.py  test_crossing_table.py  test_engine_facade.py  test_export_controller.py  test_gui_integration.py  test_gui_launch.py  test_main_window.py  test_pd_editor.py  test_pyvista_view.py  test_recent_files.py  test_session_store.py
(+19 files in other folders)
