[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knotengine"
version = "0.1.0"
description = "Topology-first knot analysis and unknotting engine for planar diagram codes."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Codex"}]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"